--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "base/variables";
-@import "components/TodoApp";
-@import "components/TodoSearch";
+@import "components/page-title";
+@import "components/container";
+@import "components/todo"
 //Componenets
 
 
